--- a/.github/workflows/dockerhub-image.yml
+++ b/.github/workflows/dockerhub-image.yml
@@ -2,31 +2,31 @@ name: dockerhub-ci
 
 on:
   push:
-    branches: main
+    branches: main,tags
 
 jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Get short hash
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+      - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: zhdkirill/wireguard:latest
-      -
-        name: Image digest
+          tags:
+          - zhdkirill/wireguard:${{ steps.vars.outputs.sha_short }}
+          - zhdkirill/wireguard:latest
+      - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
