--- a/.github/workflows/dockerhub-image.yml
+++ b/.github/workflows/dockerhub-image.yml
@@ -23,8 +23,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags:
-          - zhdkirill/wireguard:${{ steps.vars.outputs.sha_short }}
-          - zhdkirill/wireguard:latest
+          tags: zhdkirill/wireguard:${{ steps.vars.outputs.sha_short }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
