--- a/.github/workflows/dockerhub-image.yml
+++ b/.github/workflows/dockerhub-image.yml
@@ -15,14 +15,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Get short hash
-        id: vars
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: zhdkirill/wireguard:${{ steps.vars.outputs.sha_short }}
+          tags: zhdkirill/wireguard:${GITHUB_SHA::8}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
