--- a/.github/workflows/dockerhub-image.yml
+++ b/.github/workflows/dockerhub-image.yml
@@ -15,11 +15,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Get short sha
+        uses: benjlevesque/short-sha@v1.2
+        id: sha8
+        with:
+          length: 8
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: zhdkirill/wireguard:${GITHUB_SHA::8}
+          tags: zhdkirill/wireguard:${{ steps.sha8.outputs.sha }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
